--- a/sections/tc-product-image-cards.liquid
+++ b/sections/tc-product-image-cards.liquid
@@ -143,9 +143,9 @@
   </div>
 
   <div class="page-width !tw-pr-24 md:!tw-pr-0 tw-relative">
-    <div id="right-mask-{{section.id}}" class="tw-absolute tw-top-0 tw-right-0 tw-h-full tw-w-24 tw-z-50 color-{{ section.settings.color_scheme }}" style="-webkit-mask-image: linear-gradient(to left, black 0%, transparent 100%);
+    <div id="right-mask-{{section.id}}" class="tw-absolute md:tw-hidden tw-top-0 tw-right-0 tw-h-full tw-w-24 tw-z-50 color-{{ section.settings.color_scheme }}" style="-webkit-mask-image: linear-gradient(to left, black 0%, transparent 100%);
   mask-image: linear-gradient(to left, black 0%, transparent 100%);"></div>
-  <div id="left-mask-{{section.id}}" class="tw-absolute hidden tw-top-0 tw-left-0 tw-h-full tw-w-24 tw-z-50 color-{{ section.settings.color_scheme }}" style="-webkit-mask-image: linear-gradient(to right, black 0%, transparent 100%);
+  <div id="left-mask-{{section.id}}" class="tw-absolute md:tw-hidden hidden tw-top-0 tw-left-0 tw-h-full tw-w-24 tw-z-50 color-{{ section.settings.color_scheme }}" style="-webkit-mask-image: linear-gradient(to right, black 0%, transparent 100%);
   mask-image: linear-gradient(to right, black 0%, transparent 100%);"></div>
     <swiper-container
       id="swiper-{{section.id}}"
