--- a/sections/tc-sticky-product-bar.liquid
+++ b/sections/tc-sticky-product-bar.liquid
@@ -34,7 +34,7 @@
     }
   {%- endstyle -%}
   
-  <section style="padding-left: 0; padding-right: 0" class="tw-hidden md:tw-block product-header product-bar-container color-{{ section.settings.color_scheme }}">
+  <section class="tw-hidden md:tw-block product-header product-bar-container color-{{ section.settings.color_scheme }}">
     <div class="page-width product-bar section-{{ section.id }}-padding">
       {%- if product.featured_media != blank -%}
         <img
