--- a/assets/app.css
+++ b/assets/app.css
@@ -601,6 +601,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.tw-fixed {
+  position: fixed;
+}
+
 .tw-absolute {
   position: absolute;
 }
@@ -847,6 +851,10 @@ video {
   height: 100%;
 }
 
+.tw-h-screen {
+  height: 100vh;
+}
+
 .tw-w-1 {
   width: 0.25rem;
 }
@@ -871,10 +879,22 @@ video {
   width: 6rem;
 }
 
+.tw-w-screen {
+  width: 100vw;
+}
+
 .tw-max-w-fit {
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
   max-width: fit-content;
+}
+
+.tw-max-w-6xl {
+  max-width: 72rem;
+}
+
+.tw-max-w-none {
+  max-width: none;
 }
 
 .tw-shrink-0 {
@@ -930,6 +950,10 @@ video {
   cursor: grab;
 }
 
+.tw-cursor-not-allowed {
+  cursor: not-allowed;
+}
+
 .tw-select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -951,6 +975,10 @@ video {
 
 .tw-grid-rows-3 {
   grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
+.tw-flex-row {
+  flex-direction: row;
 }
 
 .tw-flex-col {
@@ -1070,6 +1098,10 @@ video {
   border-color: rgb(245 245 245 / var(--tw-border-opacity));
 }
 
+.tw-border-transparent {
+  border-color: transparent;
+}
+
 .\!tw-bg-red-400 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity)) !important;
@@ -1132,6 +1164,11 @@ video {
 .tw-bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.tw-bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
 .tw-bg-gradient-to-b {
@@ -1222,6 +1259,21 @@ video {
   padding-right: 0.5rem;
 }
 
+.tw-px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.tw-px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.tw-py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .tw-pb-0 {
   padding-bottom: 0px;
 }
@@ -1260,6 +1312,46 @@ video {
 
 .\!tw-pr-0 {
   padding-right: 0px !important;
+}
+
+.tw-pb-12 {
+  padding-bottom: 3rem;
+}
+
+.tw-pt-32 {
+  padding-top: 8rem;
+}
+
+.tw-pt-40 {
+  padding-top: 10rem;
+}
+
+.tw-pb-20 {
+  padding-bottom: 5rem;
+}
+
+.tw-pt-48 {
+  padding-top: 12rem;
+}
+
+.tw-pt-64 {
+  padding-top: 16rem;
+}
+
+.\!tw-pb-20 {
+  padding-bottom: 5rem !important;
+}
+
+.\!tw-pt-48 {
+  padding-top: 12rem !important;
+}
+
+.\!tw-pt-64 {
+  padding-top: 16rem !important;
+}
+
+.\!tw-pb-64 {
+  padding-bottom: 16rem !important;
 }
 
 .tw-text-center {
@@ -1321,6 +1413,10 @@ video {
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
 }
 
+.tw-leading-snug {
+  line-height: 1.375;
+}
+
 .\!tw-text-black {
   --tw-text-opacity: 1 !important;
   color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
@@ -1374,6 +1470,10 @@ video {
   opacity: 1;
 }
 
+.tw-opacity-50 {
+  opacity: 0.5;
+}
+
 .\!tw-shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25) !important;
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color) !important;
@@ -1410,6 +1510,14 @@ video {
   transition-duration: 150ms;
 }
 
+.tw-transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .tw-duration-200 {
   transition-duration: 200ms;
 }
@@ -1420,6 +1528,10 @@ video {
 
 .tw-duration-500 {
   transition-duration: 500ms;
+}
+
+.tw-duration-150 {
+  transition-duration: 150ms;
 }
 
 .tw-ease-in-out {
@@ -1466,6 +1578,20 @@ video {
   opacity: 1;
 }
 
+@media (min-width: 320px) {
+  .sm\:tw-flex {
+    display: flex;
+  }
+
+  .sm\:tw-max-w-none {
+    max-width: none;
+  }
+
+  .sm\:tw-justify-center {
+    justify-content: center;
+  }
+}
+
 @media (min-width: 750px) {
   .md\:tw-block {
     display: block;
@@ -1491,8 +1617,22 @@ video {
     width: auto;
   }
 
+  .md\:tw-flex-row {
+    flex-direction: row;
+  }
+
   .md\:tw-gap-2 {
     gap: 0.5rem;
+  }
+
+  .md\:tw-px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:tw-py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
 
   .md\:tw-pr-0 {
@@ -1501,6 +1641,18 @@ video {
 
   .md\:\!tw-pr-0 {
     padding-right: 0px !important;
+  }
+
+  .md\:tw-pt-40 {
+    padding-top: 10rem;
+  }
+
+  .md\:tw-pb-16 {
+    padding-bottom: 4rem;
+  }
+
+  .md\:tw-pt-64 {
+    padding-top: 16rem;
   }
 
   .disabled\:md\:tw-hidden:disabled {
