--- a/assets/app.css
+++ b/assets/app.css
@@ -897,6 +897,18 @@ video {
   max-width: none;
 }
 
+.tw-max-w-\[50\%\] {
+  max-width: 50%;
+}
+
+.tw-max-w-\[300px\] {
+  max-width: 300px;
+}
+
+.tw-max-w-\[400px\] {
+  max-width: 400px;
+}
+
 .tw-shrink-0 {
   flex-shrink: 0;
 }
@@ -1589,6 +1601,10 @@ video {
 
   .sm\:tw-max-w-none {
     max-width: none;
+  }
+
+  .sm\:tw-flex-row {
+    flex-direction: row;
   }
 
   .sm\:tw-justify-center {
