--- a/sections/digital-product.liquid
+++ b/sections/digital-product.liquid
@@ -457,10 +457,7 @@
               {%- when 'variant_picker' -%}
                 {% render 'product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
               {%- when 'buy_buttons' -%}
-                {%- if section.settings.show_initials_field -%}
-                  {%- render 'digital-product-confirmation', product_form_id: product_form_id -%}
-                {%- endif -%}
-                {%- render 'buy-buttons',
+                {%- render 'buy-buttons-digital',
                   block: block,
                   product: product,
                   product_form_id: product_form_id,
