--- a/snippets/buy-buttons-digital.liquid
+++ b/snippets/buy-buttons-digital.liquid
@@ -118,41 +118,6 @@
 
 </div>
 
-{% comment %} <script defer>
-  document.addEventListener('DOMContentLoaded', function () {
-    const form = document.querySelector('product-form');
-    const confirmationInput = document.querySelector('#confirmation');
-
-    if (confirmationInput && form) {
-      const submitButton = form.submitButton;
-
-      function updateSubmitButtonState() {
-        const val = confirmationInput.value;
-        const text = submitButton.innerText;
-
-        console.log(text);
-        if (!val && !['Already in cart'].includes(submitButton.innerText)) {
-          submitButton.disabled = true;
-          submitButton.querySelector('span').innerText = 'Please type initials to confirm';
-        } else {
-          submitButton.disabled = false;
-          submitButton.querySelector('span').innerText = '{{ 'products.product.add_to_cart' | t }}'
-        }
-      }
-
-      // Initial check
-
-      // Event listener for input changes
-      // updateSubmitButtonState();
-      // confirmationInput.addEventListener('input', updateSubmitButtonState);
-      const subscriber = subscribe(PUB_SUB_EVENTS.cartUpdate, (event) => {console.log(event); updateSubmitButtonState()})
-
-    } else {
-      console.error('Confirmation input or form not found');
-    }
-  });
-</script> {% endcomment %}
-
 <script defer>
   async function checkQuantityInCart() {
   console.log("Checking quantity in cart...");
@@ -189,7 +154,7 @@
         if (!val && !["Already in cart"].includes(submitButton.innerText)) {
           submitButton.disabled = true;
           const buttonText = submitButton.querySelector("span");
-          if (buttonText) buttonText.innerText = "Please type initials to confirm";
+          if (buttonText) buttonText.innerText = "Enter initials above to confirm";
         } else {
           submitButton.disabled = false;
           const buttonText = submitButton.querySelector("span");
@@ -209,7 +174,7 @@
         }
       } else {
         if (confirmationInput) {
-        confirmationContainer.style.display = "block"
+        confirmationContainer.style.display = "flex"
 
           confirmationInput.disabled = false;
           updateSubmitButtonState();
