--- a/assets/app.css
+++ b/assets/app.css
@@ -661,6 +661,10 @@ video {
   left: 1rem;
 }
 
+.tw-left-6 {
+  left: 1.5rem;
+}
+
 .tw-right-0 {
   right: 0px;
 }
@@ -689,6 +693,10 @@ video {
   top: 1rem;
 }
 
+.tw-top-6 {
+  top: 1.5rem;
+}
+
 .-tw-z-10 {
   z-index: -10;
 }
@@ -701,12 +709,12 @@ video {
   z-index: 10;
 }
 
-.tw-z-\[5\] {
-  z-index: 5;
-}
-
 .tw-z-50 {
   z-index: 50;
+}
+
+.tw-z-\[5\] {
+  z-index: 5;
 }
 
 .tw-col-span-10 {
@@ -735,6 +743,14 @@ video {
   margin-right: auto;
 }
 
+.tw-mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.tw-mb-4 {
+  margin-bottom: 1rem;
+}
+
 .tw-mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -755,20 +771,12 @@ video {
   margin-right: 1rem;
 }
 
-.tw-mb-4 {
-  margin-bottom: 1rem;
-}
-
-.tw-mb-3 {
-  margin-bottom: 0.75rem;
+.tw-mr-8 {
+  margin-right: 2rem;
 }
 
 .tw-mr-auto {
   margin-right: auto;
-}
-
-.tw-mr-8 {
-  margin-right: 2rem;
 }
 
 .tw-block {
@@ -821,14 +829,14 @@ video {
   height: 5rem;
 }
 
-.tw-size-8 {
-  width: 2rem;
-  height: 2rem;
-}
-
 .tw-size-24 {
   width: 6rem;
   height: 6rem;
+}
+
+.tw-size-8 {
+  width: 2rem;
+  height: 2rem;
 }
 
 .tw-h-1 {
@@ -855,12 +863,24 @@ video {
   height: 100vh;
 }
 
+.tw-h-3\/5 {
+  height: 60%;
+}
+
+.tw-h-3 {
+  height: 0.75rem;
+}
+
 .tw-w-1 {
   width: 0.25rem;
 }
 
 .tw-w-16 {
   width: 4rem;
+}
+
+.tw-w-24 {
+  width: 6rem;
 }
 
 .tw-w-4 {
@@ -875,12 +895,16 @@ video {
   width: 100%;
 }
 
-.tw-w-24 {
-  width: 6rem;
-}
-
 .tw-w-screen {
   width: 100vw;
+}
+
+.tw-max-w-6xl {
+  max-width: 72rem;
+}
+
+.tw-max-w-\[400px\] {
+  max-width: 400px;
 }
 
 .tw-max-w-fit {
@@ -889,24 +913,8 @@ video {
   max-width: fit-content;
 }
 
-.tw-max-w-6xl {
-  max-width: 72rem;
-}
-
 .tw-max-w-none {
   max-width: none;
-}
-
-.tw-max-w-\[50\%\] {
-  max-width: 50%;
-}
-
-.tw-max-w-\[300px\] {
-  max-width: 300px;
-}
-
-.tw-max-w-\[400px\] {
-  max-width: 400px;
 }
 
 .tw-shrink-0 {
@@ -949,12 +957,8 @@ video {
           animation: pulse-fast 0.9s infinite;
 }
 
-.tw-cursor-pointer {
-  cursor: pointer;
-}
-
-.tw-cursor-move {
-  cursor: move;
+.tw-cursor-auto {
+  cursor: auto;
 }
 
 .tw-cursor-grab {
@@ -962,12 +966,16 @@ video {
   cursor: grab;
 }
 
+.tw-cursor-move {
+  cursor: move;
+}
+
 .tw-cursor-not-allowed {
   cursor: not-allowed;
 }
 
-.tw-cursor-auto {
-  cursor: auto;
+.tw-cursor-pointer {
+  cursor: pointer;
 }
 
 .tw-select-none {
@@ -1099,14 +1107,9 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.tw-border-red-500 {
+.tw-border-blue-600 {
   --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
-.tw-border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
 
 .tw-border-neutral-100 {
@@ -1114,8 +1117,18 @@ video {
   border-color: rgb(245 245 245 / var(--tw-border-opacity));
 }
 
+.tw-border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
 .tw-border-transparent {
   border-color: transparent;
+}
+
+.tw-border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .\!tw-bg-red-400 {
@@ -1130,6 +1143,16 @@ video {
 
 .tw-bg-black\/40 {
   background-color: rgb(0 0 0 / 0.4);
+}
+
+.tw-bg-blue-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity));
+}
+
+.tw-bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
 .tw-bg-green-500 {
@@ -1157,6 +1180,11 @@ video {
   background-color: rgb(255 247 237 / var(--tw-bg-opacity));
 }
 
+.tw-bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+}
+
 .tw-bg-red-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
@@ -1182,21 +1210,16 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.tw-bg-orange-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
-}
-
 .tw-bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.tw-bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
 .tw-bg-gradient-to-l {
   background-image: linear-gradient(to left, var(--tw-gradient-stops));
+}
+
+.tw-bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
 .tw-from-black {
@@ -1245,6 +1268,11 @@ video {
   padding: 2rem;
 }
 
+.tw-px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .tw-px-20 {
   padding-left: 5rem;
   padding-right: 5rem;
@@ -1260,24 +1288,14 @@ video {
   padding-right: 9rem;
 }
 
-.tw-px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.tw-py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.tw-px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .tw-px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.tw-px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .tw-px-8 {
@@ -1285,37 +1303,26 @@ video {
   padding-right: 2rem;
 }
 
+.tw-py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .tw-py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
-.tw-pb-0 {
-  padding-bottom: 0px;
+.\!tw-pb-20 {
+  padding-bottom: 5rem !important;
 }
 
-.tw-pb-10 {
-  padding-bottom: 2.5rem;
+.\!tw-pb-64 {
+  padding-bottom: 16rem !important;
 }
 
-.tw-pb-16 {
-  padding-bottom: 4rem;
-}
-
-.tw-pt-0 {
-  padding-top: 0px;
-}
-
-.tw-pb-2 {
-  padding-bottom: 0.5rem;
-}
-
-.tw-pr-16 {
-  padding-right: 4rem;
-}
-
-.tw-pr-0 {
-  padding-right: 0px;
+.\!tw-pr-0 {
+  padding-right: 0px !important;
 }
 
 .\!tw-pr-16 {
@@ -1326,12 +1333,48 @@ video {
   padding-right: 6rem !important;
 }
 
-.\!tw-pr-0 {
-  padding-right: 0px !important;
+.\!tw-pt-48 {
+  padding-top: 12rem !important;
+}
+
+.\!tw-pt-64 {
+  padding-top: 16rem !important;
+}
+
+.tw-pb-0 {
+  padding-bottom: 0px;
+}
+
+.tw-pb-10 {
+  padding-bottom: 2.5rem;
 }
 
 .tw-pb-12 {
   padding-bottom: 3rem;
+}
+
+.tw-pb-16 {
+  padding-bottom: 4rem;
+}
+
+.tw-pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.tw-pb-20 {
+  padding-bottom: 5rem;
+}
+
+.tw-pr-0 {
+  padding-right: 0px;
+}
+
+.tw-pr-16 {
+  padding-right: 4rem;
+}
+
+.tw-pt-0 {
+  padding-top: 0px;
 }
 
 .tw-pt-32 {
@@ -1342,32 +1385,12 @@ video {
   padding-top: 10rem;
 }
 
-.tw-pb-20 {
-  padding-bottom: 5rem;
-}
-
 .tw-pt-48 {
   padding-top: 12rem;
 }
 
 .tw-pt-64 {
   padding-top: 16rem;
-}
-
-.\!tw-pb-20 {
-  padding-bottom: 5rem !important;
-}
-
-.\!tw-pt-48 {
-  padding-top: 12rem !important;
-}
-
-.\!tw-pt-64 {
-  padding-top: 16rem !important;
-}
-
-.\!tw-pb-64 {
-  padding-bottom: 16rem !important;
 }
 
 .tw-text-center {
@@ -1389,6 +1412,16 @@ video {
   line-height: 1;
 }
 
+.tw-text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.tw-text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .tw-text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1397,11 +1430,6 @@ video {
 .tw-text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.tw-text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 
 .tw-font-bold {
@@ -1443,14 +1471,44 @@ video {
   color: rgb(254 243 199 / var(--tw-text-opacity));
 }
 
+.tw-text-amber-500 {
+  --tw-text-opacity: 1;
+  color: rgb(245 158 11 / var(--tw-text-opacity));
+}
+
 .tw-text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.tw-text-blue-50 {
+  --tw-text-opacity: 1;
+  color: rgb(239 246 255 / var(--tw-text-opacity));
+}
+
+.tw-text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.tw-text-blue-800 {
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity));
+}
+
+.tw-text-neutral-600 {
+  --tw-text-opacity: 1;
+  color: rgb(82 82 82 / var(--tw-text-opacity));
+}
+
 .tw-text-orange-800 {
   --tw-text-opacity: 1;
   color: rgb(154 52 18 / var(--tw-text-opacity));
+}
+
+.tw-text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .tw-text-sky-600 {
@@ -1461,21 +1519,6 @@ video {
 .tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.tw-text-neutral-600 {
-  --tw-text-opacity: 1;
-  color: rgb(82 82 82 / var(--tw-text-opacity));
-}
-
-.tw-text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.tw-text-amber-500 {
-  --tw-text-opacity: 1;
-  color: rgb(245 158 11 / var(--tw-text-opacity));
 }
 
 .tw-opacity-0 {
@@ -1496,14 +1539,14 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
-.tw-shadow-orange-glow-light {
-  --tw-shadow: 0 0 30px 0px rgba(255, 155, 0, 0.6),0 0 60px 30px rgba(255, 155, 0, 0.3),0 0 120px 60px rgba(255, 155, 0, 0.1), 0 0 200px 100px rgba(255, 155, 0, 0.06);
+.tw-shadow-orange-glow-dark {
+  --tw-shadow: 0 0 30px 0px rgba(255, 155, 0, 0.3),0 0 60px 30px rgba(255, 155, 0, 0.15),0 0 120px 60px rgba(255, 155, 0, 0.05), 0 0 200px 100px rgba(255, 155, 0, 0.03);
   --tw-shadow-colored: 0 0 30px 0px var(--tw-shadow-color), 0 0 60px 30px var(--tw-shadow-color), 0 0 120px 60px var(--tw-shadow-color), 0 0 200px 100px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.tw-shadow-orange-glow-dark {
-  --tw-shadow: 0 0 30px 0px rgba(255, 155, 0, 0.3),0 0 60px 30px rgba(255, 155, 0, 0.15),0 0 120px 60px rgba(255, 155, 0, 0.05), 0 0 200px 100px rgba(255, 155, 0, 0.03);
+.tw-shadow-orange-glow-light {
+  --tw-shadow: 0 0 30px 0px rgba(255, 155, 0, 0.6),0 0 60px 30px rgba(255, 155, 0, 0.3),0 0 120px 60px rgba(255, 155, 0, 0.1), 0 0 200px 100px rgba(255, 155, 0, 0.06);
   --tw-shadow-colored: 0 0 30px 0px var(--tw-shadow-color), 0 0 60px 30px var(--tw-shadow-color), 0 0 120px 60px var(--tw-shadow-color), 0 0 200px 100px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
@@ -1512,6 +1555,14 @@ video {
   --tw-backdrop-blur: blur(12px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.tw-transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .tw-transition-all {
@@ -1526,11 +1577,7 @@ video {
   transition-duration: 150ms;
 }
 
-.tw-transition {
-  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.tw-duration-150 {
   transition-duration: 150ms;
 }
 
@@ -1546,26 +1593,32 @@ video {
   transition-duration: 500ms;
 }
 
-.tw-duration-150 {
-  transition-duration: 150ms;
-}
-
 .tw-ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hover\:tw-scale-110:hover {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.tc-fade-to-bottom {
+  -webkit-mask-image: linear-gradient(to bottom, black 0%, transparent 100%);
+  mask-image: linear-gradient(to bottom, black 0%, transparent 100%);
+}
+
+.tc-fade-to-top {
+  -webkit-mask-image: linear-gradient(to top, black 0%, transparent 100%);
+  mask-image: linear-gradient(to top, black 0%, transparent 100%);
+}
+
+.tc-fade-to-left {
+  -webkit-mask-image: linear-gradient(to left, black 0%, transparent 100%);
+  mask-image: linear-gradient(to left, black 0%, transparent 100%);
+}
+
+.tc-fade-to-right {
+  -webkit-mask-image: linear-gradient(to right, black 0%, transparent 100%);
+  mask-image: linear-gradient(to right, black 0%, transparent 100%);
 }
 
 .hover\:tw-opacity-0:hover {
   opacity: 0;
-}
-
-.hover\:tw-opacity-100:hover {
-  opacity: 1;
 }
 
 .active\:tw-translate-y-\[2px\]:active {
@@ -1584,29 +1637,7 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.tw-group:hover .group-hover\:tw-scale-110 {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.tw-group:hover .group-hover\:tw-opacity-100 {
-  opacity: 1;
-}
-
 @media (min-width: 320px) {
-  .sm\:tw-flex {
-    display: flex;
-  }
-
-  .sm\:tw-max-w-none {
-    max-width: none;
-  }
-
-  .sm\:tw-flex-row {
-    flex-direction: row;
-  }
-
   .sm\:tw-justify-center {
     justify-content: center;
   }
@@ -1655,24 +1686,12 @@ video {
     padding-bottom: 0.75rem;
   }
 
-  .md\:tw-pr-0 {
-    padding-right: 0px;
-  }
-
   .md\:\!tw-pr-0 {
     padding-right: 0px !important;
   }
 
-  .md\:tw-pt-40 {
-    padding-top: 10rem;
-  }
-
   .md\:tw-pb-16 {
     padding-bottom: 4rem;
-  }
-
-  .md\:tw-pt-64 {
-    padding-top: 16rem;
   }
 
   .disabled\:md\:tw-hidden:disabled {
@@ -1689,3 +1708,4 @@ video {
     opacity: 1;
   }
 }
+
