Fix confirmation container width

--- a/snippets/digital-product-confirmation.liquid
+++ b/snippets/digital-product-confirmation.liquid
@@ -2,6 +2,10 @@
   #confirmation-container strong {
     font-weight: 600;
   }
+
+  #confirmation-container {
+  max-width: 44rem;
+}
 </style>
 
 <div id="confirmation-container" style="display:none" class='tw-w-full tw-flex tw-flex-col tw-gap-6 tw-mb-5 tw-bg-blue-50 tw-p-6'>
