Fix mobile styling issues

--- a/snippets/country-localization.liquid
+++ b/snippets/country-localization.liquid
@@ -155,6 +155,6 @@
       </ul>
     </div>
   </div>
-  <div class="country-selector__overlay"></div>
+  {% comment %} <div class="country-selector__overlay"></div> {% endcomment %}
 </div>
 <input type="hidden" name="country_code" value="{{ localization.country.iso_code }}">
